<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_group"/>
    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        android:icon="@drawable/ic_vector_21"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/ic_group__1_"/>
    <item
        android:id="@+id/change_password"
        android:title="@string/change_password"
        android:icon="@drawable/ic_vector_31"/>
    <item
        android:id="@+id/signout"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_group__2_"/>


</menu>