<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_google_pixel_2___8">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:height="48dp"
        android:background="@drawable/border_curve"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_mail_icon"
        android:drawablePadding="16dp"
        android:ems="10"
        android:letterSpacing="0.04"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_email_address"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/name_edittext"
        app:layout_constraintStart_toStartOf="@+id/name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_popcorns_amico_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:text="@string/let_s_get_started"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:height="48dp"
        android:background="@drawable/border_curve"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_username_icon"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_name"
        android:letterSpacing="0.04"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/verifyEmail_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_curve"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/verify_email"
        android:letterSpacing="0.04"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/name_edittext"
        app:layout_constraintStart_toStartOf="@+id/name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmail_btn" />

    <ProgressBar
        android:id="@+id/signup_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>