<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_google_pixel_2___8">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <EditText
            android:id="@+id/confirmpass_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:height="48dp"
            android:background="@drawable/border_curve"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:letterSpacing="0.04"
            android:padding="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/password_edittext"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forgot_password_amico_1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="75dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.01"
            android:text="@string/create_your_password"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:height="48dp"
            android:background="@drawable/border_curve"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.04"
            android:padding="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/sign_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_curve"
            android:fontFamily="@font/roboto"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:letterSpacing="0.04"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext"
            app:layout_constraintStart_toStartOf="@+id/password_edittext"
            app:layout_constraintTop_toBottomOf="@+id/confirmpass_edittext" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.04"
            android:text="@string/new_password"
            android:textColor="#BB86FC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.04"
            android:text="@string/confirm_password"
            android:textColor="#BB86FC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />


        <ProgressBar
            android:id="@+id/password_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>